--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "Huzaifa Ansari",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.1.3"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.1.3",
+    "node-sass-middleware": "^1.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
