--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Huzaifa Ansari",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
@@ -17,6 +18,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
